--- a/src/components/Card/CatagoryCard.less
+++ b/src/components/Card/CatagoryCard.less
@@ -1,28 +1,26 @@
 @import "~antd/lib/style/themes/default.less";
 
-ul.catalist {
-  margin: 5px 0;
-  padding: 0 10px;
+.Catalist {
+  padding: 20px 0 0 0;
   list-style: none;
   overflow: hidden;
+  margin-bottom: 0px;
   li {
     float: left;
     width: 33%;
     text-align: center;
     list-style: none;
     cursor: pointer;
-    height: auto;
     transition: all .3s;
     position: relative;
-    margin: 3px 0;
+    margin-bottom: 25px;
     border-radius: 4px;
     background-color: #fff;
     overflow: hidden;
-    padding: 10px 0 0;
 
     .cataItem {
-      font-size: 24px;
-      margin: 10px 0 10px;
+      font-size: 18px;
+      margin: 0 0 10px;
       color: inherit;
     }
 
