--- a/src/components/Common/mixins.less
+++ b/src/components/Common/mixins.less
@@ -1,18 +1,16 @@
-.fixed {
+.IsFixed {
   position: fixed;
   z-index: 2;
   -webkit-font-smoothing: subpixel-antialiased;
 }
 
-.card {
-  border-radius: 3px;
+.Card {
   margin-bottom: 10px;
-  :global {
-    .ant-card-body {
-      padding: 0;
-      zoom: 1;
-    }
-  }
+  background: #fff;
+  overflow: hidden;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(26, 26, 26, .1);
+  box-sizing: border-box;
 }
 
 .Button {
