--- a/src/components/Card/NavListCard.less
+++ b/src/components/Card/NavListCard.less
@@ -25,7 +25,7 @@ ul.navlist {
     }
     &:hover {
       .navLink {
-        background-color: #646464;
+        background-color: #F7F7F7;
       }
     }
   }
