--- a/src/components/Content/WebContent.less
+++ b/src/components/Content/WebContent.less
@@ -2,7 +2,7 @@
 
 .main {
   display: block;
-  margin-top: 52px;
+  padding-top: 52px;
 }
 
 .webContent {
@@ -19,17 +19,4 @@
   width: 1000px;
   padding: 10px 16px;
   margin: 0 auto;
-}
-
-.contentMain {
-  width: 694px;
-  padding-bottom: 20px;
-  margin-right: 10px;
-}
-
-.contentSider {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  font-size: 14px;
 }
