--- a/src/components/Header/WebHeader.less
+++ b/src/components/Header/WebHeader.less
@@ -3,24 +3,26 @@
 @menu-item-border: 2px;
 
 .header {
-  position: relative;
-  min-width: 1032px;
   top: 0;
   left: 0;
   right: 0;
+  position: relative;
   overflow: hidden;
+  min-width: 1032px;
   background: #fff;
   box-shadow: 0 1px 3px rgba(26, 26, 26, .1);
   background-clip: content-box;
   z-index: 100;
-  &.fixed {
-    z-index: 100;
-  }
   .logo {
     a {
-      color: inherit;
+      color: #003333;
       font-size: 24px;
       text-decoration: none;
+      img {
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+      }
     }
   }
   .nav {
