--- a/src/components/Header/WebHeader.less
+++ b/src/components/Header/WebHeader.less
@@ -37,7 +37,7 @@
     margin-right: 18px;
     margin-left: 27px;
     color: #999;
-    font-family: Lato, @font-family;
+    font-family: Lato;
     :global {
       .ant-menu-horizontal {
         border: 0;
