--- a/src/index.less
+++ b/src/index.less
@@ -30,7 +30,7 @@ canvas {
 ::-webkit-scrollbar {
   width: 12px;
   width: 8px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 ::-webkit-scrollbar-track {
@@ -43,5 +43,5 @@ canvas {
   border-radius: 5px;
   // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: #555;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
